--- a/WebPageSummariser.ipynb
+++ b/WebPageSummariser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "523be164",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "cf9ac2f6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "9ef7d6df",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "a819f568",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "6b0217b1",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "b0e065d3",
    "metadata": {},
    "outputs": [
@@ -103,28 +103,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Home - Edward Donner\n",
-      "Home - Edward Donner\n",
-      "Home\n",
-      "Connect Four\n",
-      "Outsmart\n",
-      "An arena that pits LLMs against each other in a battle of diplomacy and deviousness\n",
-      "About\n",
-      "Posts\n",
-      "Well, hi there.\n",
-      "I’m Ed. I like writing code and experimenting with LLMs, and hopefully you’re here because you do too. I also enjoy DJing (but I’m badly out of practice), amateur electronic music production (\n",
-      "very\n",
-      "amateur) and losing myself in\n",
-      "Hacker News\n",
-      ", nodding my head sagely to things I only half understand.\n",
-      "I’m the co-founder and CTO of\n",
-      "Nebula.io\n",
-      ".\n"
+      "Breaking News, Latest News and Videos | CNN\n",
+      "Breaking News, Latest News and Videos | CNN\n",
+      "CNN values your feedback\n",
+      "1. How relevant is this ad to you?\n",
+      "2. Did you encounter any technical issues?\n",
+      "Video player was slow to load content\n",
+      "Video content never loaded\n",
+      "Ad froze or did not finish loading\n",
+      "Video content did not start after ad\n",
+      "Audio on ad was too loud\n",
+      "Other issues\n",
+      "Ad never loaded\n",
+      "Ad prevented/slowed the page from loading\n",
+      "Content moved around while ad loaded\n",
+      "Ad was repetitive to ads I've seen previously\n",
+      "Other issues\n",
+      "Cancel\n",
+      "Submit\n",
+      "Thank You!\n"
      ]
     }
    ],
    "source": [
-    "page = Website(\"https://edwarddonner.com\")\n",
+    "page = Website(\"https://cnn.com\")\n",
     "print(page.title)\n",
     "print(page.text[:500])"
    ]
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "7b5d1aa1",
    "metadata": {},
    "outputs": [],
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "d5d15dec",
    "metadata": {},
    "outputs": [],
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "02781538",
    "metadata": {},
    "outputs": [],
@@ -196,28 +198,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "c6171664",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'This is the personal website of **Edward (Ed) Donner**, a technologist specializing in AI and Large Language Models (LLMs).\\n\\n*   **Professional Background**:\\n    *   Co-founder and CTO of **Nebula.io**, an AI-powered platform used by recruiters to discover and manage talent.\\n    *   Previously founded the AI startup **untapt**, which was acquired in 2021.\\n\\n*   **Interests and Expertise**:\\n    *   He focuses on writing code and experimenting with LLMs.\\n    *   His personal interests include DJing, electronic music production, and reading Hacker News.\\n\\n*   **Website Content**:\\n    *   Features projects like **Outsmart**, a competitive arena for LLMs.\\n    *   Includes a \"Posts\" section with articles and courses on topics like \"Agentic AI Engineering\" and \"AI in Production.\"\\n    *   Provides links to connect with him on social media and subscribe to his newsletter.'"
+       "'Of course, here is a concise summary of the CNN website\\'s content.\\n\\n***\\n\\n### Summary of CNN Homepage\\n\\nThis is the main page for CNN, a major news organization. The content covers a wide range of breaking news and current events from the US and around the world.\\n\\n#### Top Headlines\\n*   **US Politics:** The top stories focus on a potential government shutdown, its impact on travel and federal workers, and related political maneuvering. There are reports on a contentious Senate hearing for Pam Bondi and a Supreme Court decision regarding conversion therapy bans.\\n*   **International Affairs:** Live updates are provided on Gaza ceasefire talks. The ongoing wars in Ukraine and Israel-Hamas are prominent navigation topics.\\n*   **Trump-related News:** Multiple articles cover former President Trump, including his comments on the shutdown, National Guard deployments, and the Epstein investigation.\\n\\n#### Key Sections\\n*   **US & World News:** Covers a variety of domestic and international stories, from crime and justice to regional news from Africa, Asia, Europe, and more.\\n*   **Politics:** Features analysis, polls, and exclusive reports on government affairs and elections.\\n*   **Business & Shopping:** Highlights market news and features a large section called \"CNN Underscored\" dedicated to Amazon Prime Day deals on various products like electronics, home goods, and fashion.\\n*   **Health & Lifestyle:** Includes articles on fitness, food, travel, and style.\\n*   **Entertainment & Sports:** Reports on celebrity news (Taylor Swift, Jennifer Lopez/Ben Affleck reunion), movies, and major sports stories.\\n\\nThe website also offers extensive video clips, live TV streaming, podcasts, and interactive games like crosswords and quizzes.'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "summarize_website(\"https://edwarddonner.com\")"
+    "summarize_website(\"https://cnn.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "e713adfe",
    "metadata": {},
    "outputs": [],
@@ -231,27 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "b309dec1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "This is the personal website of **Ed Donner**, a co-founder and CTO of an AI company called **Nebula.io**.\n",
+       "This is the personal website of **Ed Donner**, a technologist and entrepreneur specializing in AI and Large Language Models (LLMs).\n",
        "\n",
        "### Key Information:\n",
-       "\n",
-       "*   **Professional Background:**\n",
-       "    *   Co-founder and CTO of **Nebula.io**, a company using proprietary AI and LLMs to help recruiters source and manage talent.\n",
-       "    *   Former founder and CEO of the AI startup **untapt**, which was acquired in 2021.\n",
-       "*   **Interests:**\n",
-       "    *   Writing code and experimenting with Large Language Models (LLMs).\n",
-       "    *   DJing and amateur electronic music production.\n",
+       "*   **Profession:** Co-founder and CTO of **Nebula.io**, an AI company that helps recruiters source and manage talent. He was previously the founder and CEO of AI startup **untapt**, which was acquired in 2021.\n",
+       "*   **Expertise:** His work involves proprietary LLMs verticalized for the talent industry and patented matching models.\n",
+       "*   **Interests:** Writing code, experimenting with LLMs, DJing, and electronic music production.\n",
        "*   **Website Content:**\n",
-       "    *   **Projects:** Showcases \"Connect Four\" and \"Outsmart,\" an arena where LLMs compete against each other.\n",
-       "    *   **Posts:** A blog section with articles on topics like Generative AI, Agentic AI engineering, and LLM courses.\n",
-       "    *   **Contact:** Provides links to his LinkedIn and Twitter profiles, his email address, and a newsletter subscription."
+       "    *   **Projects:** Includes \"Connect Four\" and \"Outsmart,\" an arena where LLMs compete against each other.\n",
+       "    *   **Posts:** Features articles and briefings on AI topics, such as \"Gen AI and Agentic AI on AWS\" and \"The Complete Agentic AI Engineering Course.\"\n",
+       "    *   **Contact:** Provides links to his social media (LinkedIn, Twitter) and an option to subscribe to his newsletter."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -268,7 +266,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "llms",
    "language": "python",
    "name": "python3"
   },
