--- a/WebPageSummariser.ipynb
+++ b/WebPageSummariser.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b309dec1",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "display_summary(\"https://edwarddonner.com\")"
+    "display_summary(\"https://cnn.com\")"
    ]
   }
  ],
