--- a/WebPageSummariser.ipynb
+++ b/WebPageSummariser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "523be164",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "cf9ac2f6",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "9ef7d6df",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "a819f568",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "6b0217b1",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "b0e065d3",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "7b5d1aa1",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "d5d15dec",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "02781538",
    "metadata": {},
    "outputs": [],
@@ -198,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "c6171664",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Of course, here is a concise summary of the CNN website\\'s content.\\n\\n***\\n\\n### Summary of CNN Homepage\\n\\nThis is the main page for CNN, a major news organization. The content covers a wide range of breaking news and current events from the US and around the world.\\n\\n#### Top Headlines\\n*   **US Politics:** The top stories focus on a potential government shutdown, its impact on travel and federal workers, and related political maneuvering. There are reports on a contentious Senate hearing for Pam Bondi and a Supreme Court decision regarding conversion therapy bans.\\n*   **International Affairs:** Live updates are provided on Gaza ceasefire talks. The ongoing wars in Ukraine and Israel-Hamas are prominent navigation topics.\\n*   **Trump-related News:** Multiple articles cover former President Trump, including his comments on the shutdown, National Guard deployments, and the Epstein investigation.\\n\\n#### Key Sections\\n*   **US & World News:** Covers a variety of domestic and international stories, from crime and justice to regional news from Africa, Asia, Europe, and more.\\n*   **Politics:** Features analysis, polls, and exclusive reports on government affairs and elections.\\n*   **Business & Shopping:** Highlights market news and features a large section called \"CNN Underscored\" dedicated to Amazon Prime Day deals on various products like electronics, home goods, and fashion.\\n*   **Health & Lifestyle:** Includes articles on fitness, food, travel, and style.\\n*   **Entertainment & Sports:** Reports on celebrity news (Taylor Swift, Jennifer Lopez/Ben Affleck reunion), movies, and major sports stories.\\n\\nThe website also offers extensive video clips, live TV streaming, podcasts, and interactive games like crosswords and quizzes.'"
+       "'Of course! Here is a concise summary of the content on the CNN homepage.\\n\\n***\\n\\n### Summary of CNN Homepage\\n\\nThis is the main portal for CNN, a major news organization. The page provides a broad overview of the day\\'s top news stories, featuring a mix of US and international events, politics, business, and entertainment.\\n\\n**Top Stories:**\\n*   **US Government Shutdown:** A major focus is on a government shutdown, which is causing travel delays at major airports. There are related stories about President Trump considering withholding back pay from federal workers and the political messaging from the GOP.\\n*   **Supreme Court:** The court is reportedly prepared to rule against a ban on conversion therapy.\\n*   **Pam Bondi Hearing:** The attorney general nominee is facing a contentious Senate confirmation hearing, with questions about National Guard deployments and various investigations.\\n*   **Gaza Ceasefire Talks:** Live updates indicate that talks are making progress.\\n\\n**Key Sections & Other Highlights:**\\n*   **Politics:** Coverage includes Trump\\'s potential use of an old law to deploy the National Guard and various political analyses.\\n*   **World News:** Updates on the Israel-Hamas and Ukraine-Russia wars are prominently featured.\\n*   **Business & Consumer:** There is a heavy emphasis on **Amazon Prime Day** deals, promoted through CNN\\'s review section, \"Underscored.\" Other business news includes Tesla unveiling cheaper car models.\\n*   **Entertainment:** Trending topics include a \"Bennifer\" (Jennifer Lopez and Ben Affleck) reunion and Taylor Swift\\'s recent album and Super Bowl status.\\n*   **Video Content:** The page is rich with video clips covering a wide range of topics, from political exchanges to international news and celebrity updates.\\n*   **Subscriber Content:** Several in-depth articles and analyses are marked as exclusive for CNN subscribers.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "e713adfe",
    "metadata": {},
    "outputs": [],
@@ -233,23 +233,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b309dec1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "This is the personal website of **Ed Donner**, a technologist and entrepreneur specializing in AI and Large Language Models (LLMs).\n",
+       "Of course. Here is a concise summary of the CNN webpage content in markdown format.\n",
        "\n",
-       "### Key Information:\n",
-       "*   **Profession:** Co-founder and CTO of **Nebula.io**, an AI company that helps recruiters source and manage talent. He was previously the founder and CEO of AI startup **untapt**, which was acquired in 2021.\n",
-       "*   **Expertise:** His work involves proprietary LLMs verticalized for the talent industry and patented matching models.\n",
-       "*   **Interests:** Writing code, experimenting with LLMs, DJing, and electronic music production.\n",
-       "*   **Website Content:**\n",
-       "    *   **Projects:** Includes \"Connect Four\" and \"Outsmart,\" an arena where LLMs compete against each other.\n",
-       "    *   **Posts:** Features articles and briefings on AI topics, such as \"Gen AI and Agentic AI on AWS\" and \"The Complete Agentic AI Engineering Course.\"\n",
-       "    *   **Contact:** Provides links to his social media (LinkedIn, Twitter) and an option to subscribe to his newsletter."
+       "### Overview\n",
+       "\n",
+       "This is the main homepage for CNN, a major news organization. It serves as a portal to a wide range of global and US news, featuring top headlines, live updates, videos, and various content sections.\n",
+       "\n",
+       "### Top News Stories\n",
+       "\n",
+       "*   **US Politics:** The lead stories focus on a potential **government shutdown**, its impact on travelers and federal workers, and related political maneuvering. There are also articles on a Supreme Court ruling concerning conversion therapy and the contentious Senate hearing for Pam Bondi.\n",
+       "*   **International Affairs:** **Live updates on Gaza ceasefire talks** and the ongoing **Israel-Hamas War** are prominently featured. The Ukraine-Russia war is also a key navigation topic.\n",
+       "*   **Donald Trump:** Several headlines involve the former president, including his comments on the shutdown, National Guard deployments, and the Epstein investigation.\n",
+       "*   **Investigations:** There is a dedicated section on the fallout from the **Jeffrey Epstein investigations**, including a Supreme Court appeal from Ghislaine Maxwell.\n",
+       "\n",
+       "### Featured Content & Sections\n",
+       "\n",
+       "*   **CNN Underscored:** A significant portion of the page is dedicated to product reviews and deals, with a heavy emphasis on **Amazon Prime Day** sales on items like shoes, electronics, and kitchen essentials.\n",
+       "*   **Videos:** A large collection of recent video clips covering news events, interviews, and human-interest stories.\n",
+       "*   **Live Updates:** Dedicated, real-time coverage of breaking news events like the Gaza talks and the government shutdown.\n",
+       "*   **Analysis & Exclusives:** In-depth articles and opinion pieces are available, some of which are marked for subscribers only.\n",
+       "*   **Other Categories:** The site is organized into broad sections including World, Business, Health, Entertainment, Sports, Climate, and Style.\n",
+       "\n",
+       "### Website Features\n",
+       "\n",
+       "*   **Multimedia:** The site offers content via articles, live TV, video clips, and podcasts (\"Listen\").\n",
+       "*   **Interactivity:** Users can play games (crosswords, Sudoku) and take quizzes.\n",
+       "*   **Personalization:** Options to sign in, create an account, and follow specific topics."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
